ChildTable fixes - Fixed issues with the CollapsiblePanelcollapsing every time you click anywhere on the extra - Fixed the styling on the ChildTable panel body

--- a/src/components/childTable/styles/index.less
+++ b/src/components/childTable/styles/index.less
@@ -5,6 +5,14 @@
     }
   }
 
+  .ant-collapse-content-box {
+    padding: unset !important;
+  }
+
+  .sha-react-table {
+    margin: unset;
+  }
+
   .sha-child-table-extra {
     display: flex;
     // justify-content: ;
